--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ th {
 </table>
 
 <script>
-/* ✅ 桃園官方「穩定可用」資料 API */
+/* ✅ 桃園 YouBike 即時站點狀態（已確認 GitHub Pages 可用） */
 const API_URL =
-  "https://data.tycg.gov.tw/api/v1/rest/datastore/a1b4714b-3b75-4ff8-a8f2-cc377e4eaa0f?format=json";
+  "https://data.tycg.gov.tw/api/v1/rest/datastore/5ca2bfc7-9ace-4719-88ae-4034b9a5a55c";
 
 async function loadData() {
   try {
